# phionyx-openai-agents

./: README.md  pyproject.toml
.github/workflows/: release.yml
examples/: quickstart.py
src/phionyx_openai_agents/: __init__.py  audit_chain.py  processor.py
tests/: test_envelope_chain.py  test_extended_scenarios.py  test_smoke.py
